--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <div id="display"/>
 <script src="animations/love.js"></script>
 <script src="animations/beat.js"></script>
+<script src="animations/spreng.js"></script>
 <script src="rot.js"></script>
 <script src="render.js"></script>
