--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <script src="animations/love.js"></script>
 <script src="animations/beat.js"></script>
 <script src="animations/spreng.js"></script>
+<script src="animations/sleep.js"></script>
 <script src="rot.js"></script>
 <script src="render.js"></script>
