CUDDLE THE HANS

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <script src="animations/beat.js"></script>
 <script src="animations/spreng.js"></script>
 <script src="animations/sleep.js"></script>
+<script src="animations/cuddle.js"></script>
 <script src="rot.js"></script>
 <script src="render.js"></script>
