--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <script src="animations/spreng.js"></script>
 <script src="animations/sleep.js"></script>
 <script src="animations/cuddle.js"></script>
+<script src="animations/eat.js"></script>
 <script src="rot.js"></script>
 <script src="render.js"></script>
