--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <script src="animations/sleep.js"></script>
 <script src="animations/cuddle.js"></script>
 <script src="animations/eat.js"></script>
+<script src="animations/feed.js"></script>
 <script src="rot.js"></script>
 <script src="render.js"></script>
