--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <script src="animations/cuddle.js"></script>
 <script src="animations/eat.js"></script>
 <script src="animations/feed.js"></script>
+<script src="animations/play.js"></script>
 <script src="rot.js"></script>
 <script src="render.js"></script>
