Load files with requirejs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!doctype HTML>
-<div id="display"/>
+<head>
+  <title>Tiny Little Hans</title>
+  <script data-main="scripts/render" src="scripts/require.js"></script>
+</head>
+<body>
+  <div id="display"/>
+</body>
+
+<!--
 <script src="animations/love.js"></script>
 <script src="animations/beat.js"></script>
 <script src="animations/spreng.js"></script>
@@ -10,3 +18,4 @@
 <script src="animations/play.js"></script>
 <script src="rot.js"></script>
 <script src="render.js"></script>
+-->
