--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
 <!doctype HTML>
 <head>
   <title>Tiny Little Hans</title>
-  <script data-main="scripts/render" src="scripts/require.js"></script>
+  <script data-main="scripts/main" src="scripts/require.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div id="display"/>
+  <select id="animations">
+  </select>
 </body>
-
-<!--
-<script src="animations/love.js"></script>
-<script src="animations/beat.js"></script>
-<script src="animations/spreng.js"></script>
-<script src="animations/sleep.js"></script>
-<script src="animations/cuddle.js"></script>
-<script src="animations/eat.js"></script>
-<script src="animations/feed.js"></script>
-<script src="animations/play.js"></script>
-<script src="rot.js"></script>
-<script src="render.js"></script>
--->
