Add a game state

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div id="display"/>
-  <select id="animations">
-  </select>
+  <div id="display"></div>
+  <div id="status">
+    Power: 9001
+  </div>
+  <div id="control">
+    <select id="animations"> </select>
+  </div>
 </body>
