--- a/viewer.html
+++ b/viewer.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div id="display"/>
+  <div id="display"></div>
+  <div id="status"></div>
   <select id="animations">
   </select>
 </body>
