--- a/viewer.html
+++ b/viewer.html
@@ -3,6 +3,7 @@
   <title>Tiny Little Hans</title>
   <script data-main="scripts/viewer" src="scripts/require.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div id="display"></div>
