--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 </head>
 <body>
   <div id="display"></div>
-  <div id="status">
-    Power: 9001
-  </div>
-  <div id="control">
-    <select id="animations"> </select>
-  </div>
+  <div id="control"></div>
+  <div id="status"></div>
 </body>
