--- a/viewer.html
+++ b/viewer.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <head>
-  <title>Tiny Little Hans</title>
+  <title>Viewer</title>
   <script data-main="scripts/viewer" src="scripts/require.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css"/>
