--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div id="display"></div>
+  <div id="info"></div>
   <div id="control"></div>
   <div id="status"></div>
 </body>
