Include purecss framework

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mocha Tests</title>
-  <link href="mocha.css" rel="stylesheet" />
+  <link href="css/mocha.css" rel="stylesheet" />
 </head>
 <body>
   <div id="mocha"></div>
