--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <title>Tiny Little Hans</title>
   <script data-main="scripts/main" src="scripts/require.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="css/pure-min.css">
+  <link rel="stylesheet" href="css/grids-responsive-min.css">
+  <link rel="stylesheet" href="css/style.css"/>
+
 </head>
 <body>
   <div id="display"></div>
